--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -20,11 +20,11 @@ services:
     env_file:
       - ./server/.env
     healthcheck:
-      test:
-        ["CMD", "wget", "--spider", "-q", "http://localhost:3000/api/health/"]
+      test: ["CMD-SHELL", "curl -fsSL http://localhost:3000/api/health || exit 1"]
       interval: 30s
       timeout: 5s
       retries: 5
+      start_period: 30s 
     depends_on:
       - ghostroom-db
     restart: unless-stopped
